# python-template

./: .copier-answers.yml  Dockerfile  Makefile  README.md  copier.yaml  pyproject.toml  zensical.toml
.github/workflows/: ci.yaml
docs/: mkdocs.yaml
src/: pyproject.toml.jinja  {% if docker %}Dockerfile{% endif %}.jinja  {% if docs %}zensical.toml{% endif %}.jinja
src/.github/workflows/: ci.yaml.jinja  {% if docs %}docs.yaml{% endif %}
